3.2.0 b514
* added custom annotation to rules
* fixed tab suggestions from returning an empty string
* added new condition world-time-tick